added placeholder and text value

--- a/Main.html
+++ b/Main.html
@@ -1,70 +1,73 @@
 <html>
+
 <head>
-  <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body><br>
-  <h1 style="text-align:center;"><u><b>Aadhar based School development System</u></b></h1>
+    <h1 style="text-align:center;"><u><b>Aadhar based School development System</u></b>
+    </h1>
 
     <form method="post" action=" ">
-      <div style="text-align:center;">
-        <input type="text" name="name" id="name" value="Enter Name" ><br><br>
-        <input type="text" name="aadhaarId" id="id" value="Enter ID "><br><br>
-        <button type="button" class="myt1" onclick="check()">Submit</button><br><br>
-        <button type="button" onclick="date()" id="dd">0</button>
-      </div>
+        <div style="text-align:center;">
+            <input type="text" name="name" id="name" placeholder="Enter Name"><br><br>
+            <input type="text" name="aadhaarId" id="id" placeholder="Enter ID "><br><br>
+            <button type="button" class="myt1" onclick="check()">Submit</button><br><br>
+            <button type="button" onclick="date()" id="dd">0</button>
+        </div>
         <br><br>
         <div id="demo"></div>
         <br><br>
         <table class="expense-table">
-          <tr>
-             <td id="heading">Roll No.</td>
-             <td id="heading">Attendance</td>
-         </tr>
-        <tr>
-           <td id="heading">123401</td>
-           <td id="1">0</td>
-       </tr>
-       <tr>
-          <td id="heading">123402</td>
-          <td id="2">0</td>
-      </tr>
-      <tr>
-         <td id="heading">123403</td>
-         <td id="3">0</td>
-     </tr>
-     <tr>
-        <td id="heading">123404</td>
-        <td id="4">0</td>
-    </tr>
-    <tr>
-       <td id="heading">123405</td>
-       <td id="5">0</td>
-   </tr>
-   <tr>
-      <td id="heading">123406</td>
-      <td id="6">0</td>
-  </tr>
-  <tr>
-     <td id="heading">123407</td>
-     <td id="7">0</td>
- </tr>
- <tr>
-    <td id="heading">123408</td>
-    <td id="8">0</td>
-</tr>
-<tr>
-   <td id="heading">123409</td>
-   <td id="9">0</td>
-</tr>
-<tr>
-   <td id="heading">123410</td>
-   <td id="10">0</td>
-</tr>
-<tr>
-   <td id="heading">Total MDM</td>
-   <td id="tt">0</td>
-</tr>
-     </table>
+            <tr>
+                <td id="heading">Roll No.</td>
+                <td id="heading">Attendance</td>
+            </tr>
+            <tr>
+                <td id="heading">123401</td>
+                <td id="1">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123402</td>
+                <td id="2">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123403</td>
+                <td id="3">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123404</td>
+                <td id="4">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123405</td>
+                <td id="5">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123406</td>
+                <td id="6">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123407</td>
+                <td id="7">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123408</td>
+                <td id="8">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123409</td>
+                <td id="9">0</td>
+            </tr>
+            <tr>
+                <td id="heading">123410</td>
+                <td id="10">0</td>
+            </tr>
+            <tr>
+                <td id="heading">Total MDM</td>
+                <td id="tt">0</td>
+            </tr>
+        </table>
     </form>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js">
     </script>
