changed the structure of the table and its style, centered the demo id element

--- a/Main.html
+++ b/Main.html
@@ -16,55 +16,55 @@
             <button type="button" onclick="date()" id="dd">0</button>
         </div>
         <br><br>
-        <div id="demo"></div>
+        <div id="demo" style="text-align:center;"></div>
         <br><br>
-        <table class="expense-table">
+        <table id="expense-table">
             <tr>
-                <td id="heading">Roll No.</td>
-                <td id="heading">Attendance</td>
+                <td id="heading"><u>Student Name</u></td>
+                <td id="heading"><u>Attendance</u></td>
             </tr>
             <tr>
-                <td id="heading">123401</td>
+                <td id="heading">Wolfgang Yerrington</td>
                 <td id="1">0</td>
             </tr>
             <tr>
-                <td id="heading">123402</td>
+                <td id="heading">Richart Tomasz</td>
                 <td id="2">0</td>
             </tr>
             <tr>
-                <td id="heading">123403</td>
+                <td id="heading">Shaun Fluin</td>
                 <td id="3">0</td>
             </tr>
             <tr>
-                <td id="heading">123404</td>
+                <td id="heading">Chane Trench</td>
                 <td id="4">0</td>
             </tr>
             <tr>
-                <td id="heading">123405</td>
+                <td id="heading">Lotti Beet</td>
                 <td id="5">0</td>
             </tr>
             <tr>
-                <td id="heading">123406</td>
+                <td id="heading">Carolee Sotheby</td>
                 <td id="6">0</td>
             </tr>
             <tr>
-                <td id="heading">123407</td>
+                <td id="heading">Clemence Geraldini</td>
                 <td id="7">0</td>
             </tr>
             <tr>
-                <td id="heading">123408</td>
+                <td id="heading">Julienne Beetham</td>
                 <td id="8">0</td>
             </tr>
             <tr>
-                <td id="heading">123409</td>
+                <td id="heading">Claudell Murrells</td>
                 <td id="9">0</td>
             </tr>
             <tr>
-                <td id="heading">123410</td>
+                <td id="heading">Shanna Staddart</td>
                 <td id="10">0</td>
             </tr>
             <tr>
-                <td id="heading">Total MDM</td>
+                <td id="heading"><u>Total MDM</u></td>
                 <td id="tt">0</td>
             </tr>
         </table>
