added labels , stylised the buttons

--- a/Main.html
+++ b/Main.html
@@ -11,10 +11,10 @@
 
     <form method="post" action=" ">
         <div style="text-align:center;">
-            <input type="text" name="name" id="name" placeholder="Enter Name"><br><br>
-            <input type="text" name="aadhaarId" id="id" placeholder="Enter ID "><br><br>
-            <button type="button" class="myt1" onclick="check()">Submit</button><br>
-            <p><b>Date: </b><button type="button" onclick="date()" id="dd" style="width:50px;">0</button></p>
+            <p><b>Student's Name: </b><input type="text" name="name" id="name" placeholder="Enter Name"><br></p>
+            <p><b>Aadhar ID: &emsp;&emsp;</b><input type="text" name="aadhaarId" id="id" placeholder="Enter ID "><br></p>
+            <button type="button" class="myt1" onclick="check()"><b>Submit</b></button><br>
+            <p><b>Date: </b><button type="button" onclick="date()" id="dd">0</button></p>
         </div>
         <br>
         <div id="demo" style="text-align:center;"></div>
